# template-rs-worker

./: .gitpod.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker.yml  rust.yml  workers.yml
