[package]
authors = ["FL03 <jo3mccain@scattered-systems.com> (https://github.com/FL03)"]
categories = []
description = "template-rs-worker"
edition = "2021"
homepage = "https://github.com/FL03/template-rs-worker/wiki"
keywords = ["template", "wasm", "worker"]
license = "Apache-2.0"
name = "template-rs-worker"
readme = "README.md"
repository = "https://github.com/FL03/template-rs-worker"
version = "0.1.0"

[features]
default = ["core"]
full = ["core"]

core = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { optional = true, version = "0.1.7" }
js-sys = { features = [], version = "0.3.60" }
gloo = { features = [], version = "0.8.0" }
pulldown-cmark = "0.9.2"
serde = { features = ["derive"], version = "1.0.149" }  
serde_json = "1.0.89"
tokio = "1.21.1"
wasm-bindgen = { features = ["serde-serialize"], version = "0.2.83" }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
worker = "0.0.12"

[dependencies.web-sys]
features = []
version = "0.3.60"

[profile.release]
opt-level = "z"

[target.wasm32-unknown-unkown]

[target.wasm32-wasi]
